little changes html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     		<ul>
     		<li>
     			<h3>Быстро</h3>
-    			<p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы - счастливый обладатель стильной стрижки-минутки!</p>    			
+    			<p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы &#8212; счастливый обладатель стильной стрижки-минутки!</p>    			
     		</li>
     		<li>
     			<h3>Круто</h3>
@@ -39,7 +39,7 @@
     		</li>
     		<li>
     			<h3>Дорого</h3>
-    			<p>Наши мастера - профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>    			
+    			<p>Наши мастера &#8212; профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>    			
     		</li>
     	    </ul>
     	</section>
@@ -114,7 +114,7 @@
     		</ul>
     	</div>
     	<p>
-    		Разработано
+    		Разработано<br>
     		<a href="https://htmlacademy.ru/">HTML Academy</a>
     	</p>
     </footer>
