--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     		</ul>
     		<ul>
     			<li>
-    				<button type="button">Войти</button>
+    				<a href="login.html">Вход</a>
     			</li>
     		</ul>
     	</nav>
@@ -70,6 +70,61 @@
     		<button type="button">Вперед</button>
     	</section>
 
+        <section>
+            <h2>Записаться</h2>
+            <p>Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
+            <form action="https://echo.htmlacademy.ru" method="post">
+                <p>
+                    <label for="appointment-date">Дата</label>
+                    <input id="appointment-date" type="date" name="date" value="2017-10-08">
+                </p>
+                <p>
+                    <label for="apppointment-time">Время</label>
+                    <input id="appointment-time" type="time" name="time" value="10:00">
+                </p>
+                <p>
+                    <label for="appointment-name">Ваше имя</label>
+                    <input id="appointment-name" type="text" name="name" value="" placeholder="Борода">
+                </p>
+                <p>
+                    <label for="appointment-phone">Телефон</label>
+                    <input id="appointment-phone" type="tel" name="phone" value="" placeholder="+7 123 456-78-90">
+                </p> 
+                <button type="submit">Отправить</button>               
+            </form>
+        </section>
+
+        <section>
+        <h2>Личный кабинет</h2>
+        <p>Введите свой логин и пароль</p>
+        <form action="https://echo.htmlacademy.ru" method="post">
+        <p>
+            <label for="user-login">Логин</label>
+            <input id="user-login" type="email" name="login" placeholder="email@example.com">
+        </p>
+        <p>
+            <label for="user-password">Пароль</label>
+            <input id="user-password" type="password" name="password" placeholder="*******">
+        </p>
+        <p>
+            <label>
+                <input type="checkbox" name="remember">
+                Запомните меня
+            </label>
+            <a href="#">Я забыл пароль!</a>
+        </p>
+        <button type="submit">
+            Войти            
+        </button>    
+        </form>
+        <button type="button">Закрыть</button>
+        </section>
+
+        <section>
+        <h2>Как до нас добраться</h2>
+        <button type="button">Закрыть</button>
+        </section>
+
     	<section>
     		<h2>Контактная информация</h2>
     		<p>
@@ -84,12 +139,6 @@
     		</p>
     		<a href="map.html">Как проехать</a>
     		<a href="contacts.html">Обратная связь</a>
-    	</section>
-
-    	<section>
-    		<h2>Записаться</h2>
-    		<p>Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
-    		<!--Здесь будет форма -->
     	</section>
     </main>
     <footer>
@@ -117,18 +166,6 @@
     		Разработано<br>
     		<a href="https://htmlacademy.ru/">HTML Academy</a>
     	</p>
-    </footer>
-
-    <section>
-    	<h2>Личный кабинет</h2>
-    	<p>Введите свой логин и пароль</p>
-    	<!--Здесь будет форма -->
-    	<button type="button">Закрыть</button>
-    </section>
-
-    <section>
-    	<h2>Как до нас добраться</h2>
-    	<button type="button">Закрыть</button>
-    </section>	
+    </footer>	
   </body>
 </html>
